# cloudera-mcp-server

./: .gitignore  LICENSE  README.md  agent_studio_mcp.json  env.example  pyproject.toml
docs/: registry_table.hql
src/cloudera_manager_mcp/: __init__.py  cm_client.py  cm_pool.py  cm_registry.py  config.py  models.py.old  server.py
